[project]
name = "memobj"
version = "0.15.2"
description = "A library for defining objects in memory"
readme = "README.md"
authors = [
    {name="StarrFox", email="starrfox6312@gmail.com"}
]
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "iced-x86>=1.21.0",
    "pefile>=2024.8.26; sys_platform == 'win32'",
    "regex>=2025.9.18",
]

[project.urls]
Repository = "https://github.com/StarrFox/memobj"
Issues = "https://github.com/StarrFox/memobj/issues"

[dependency-groups]
tests = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "types-regex>=2025.9.18.20250921",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
