[project]
name = "memobj"
version = "0.17.0"
description = "A library for defining objects in memory"
readme = "README.md"
authors = [
    {name="StarrFox", email="starrfox6312@gmail.com"}
]
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "iced-x86>=1.21.0",
    "pefile>=2024.8.26; sys_platform == 'win32'",
    "regex>=2026.5.9",
]

[project.urls]
Documentation = "https://memobj.readthedocs.io/en/latest/"
Repository = "https://github.com/StarrFox/memobj"
Issues = "https://github.com/StarrFox/memobj/issues"

[dependency-groups]
docs = [
    "sphinx>=7.0",
    "furo",
    "myst-parser",
]
tests = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.0.0",
    "types-regex>=2026.5.9.20260518",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
